<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="colorPrimary">#3F51B5</color>
    <color name="colorPrimaryDark">#303F9F</color>
    <color name="colorAccent">#FF4081</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="statusInProgress">#18A0FB</color>
    <color name="statusCompleted">#4DDB92</color>
    <color name="statusPending">#FCE391</color>
    <color name="navSelected">#808080</color>
    <color name="textPrimary">#212121</color>
    <color name="textSecondary">#666666</color>
    <color name="divider">#E0E0E0</color>
    <string name="description_for_task_two">Description for Task Two</string>
    <string name="todo">TODO</string>
    <string name="projectsync">ProjectSync</string>
    <string name="todo1">TODO</string>
    <string name="vc">VC</string>
    <string name="welcome_back_van_harvey">Welcome back, Van Harvey</string>
    <string name="your_current_projects">Your current projects</string>
    <string name="project_alpha">Project Alpha</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</string>
    <string name="project_beta">Project Beta</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit1">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</string>
    <string name="project_gamma">Project Gamma</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit2">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</string>
    <string name="your_current_tasks">Your current tasks</string>
    <string name="project_alpha1">Project Alpha</string>
    <string name="in_progress">In Progress</string>
    <string name="project_alpha2">Project Beta</string>
    <string name="description_for_task_two1">Description for Task Two</string>
    <string name="completed">Completed</string>
    <string name="project_alpha3">Project Gamma</string>
    <string name="description_for_task_two2">Description for Task Two</string>
    <string name="pending">Pending</string>
    <string name="logo">logo.png</string>
    <string name="app_name">ProjectSync</string>
    <string name="search">Search</string>
    <string name="projects">Projects</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="home" />
    <string name="dropdown" />
</resources>